--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     </div>
 
     <div id="main-wrapper" class="main-wrapper">
-
         <!--=====================================-->
         <!--=        Header Area Start       	=-->
         <!--=====================================-->
@@ -197,143 +196,56 @@
         <!--=       Hero Banner Area Start      =-->
         <!--=====================================-->
         <div class="hero-banner hero-style-7">
-            <div class="slider">
-                <div class="container">
-                    <div class="swiper health-slider-content">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <div class="inner">
-                                    <h1 class="title">تحليل نتائج الفصل الأول.</h1>
-                                    <p>يقوم الموقع بتحليل مفصل للنتائج بالإظافة إلى إستخراج توجيه التلاميذ..</p>
-                                    <div class="banner-btn">
-                                        <a href="#" class="edu-btn">الدخول</a>
-                                    </div>
-                                </div>
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-5">
+                        <div class="banner-content">
+                            <h1 class="title" data-sal-delay="100" data-sal="slide-up" data-sal-duration="1000">منصة التوجيه والإرشاد  <span class="color-secondary">المدرسي</span></h1>
+                            <p data-sal-delay="200" data-sal="slide-up" data-sal-duration="1000"> تحليل الأداء الطلابي لرحلة تعليمية ناجحة.</p>
+                            <div class="banner-btn" data-sal-delay="400" data-sal="slide-up" data-sal-duration="1000">
+                                <a class="edu-btn scroll-btn" data-target="Teamsection">خدمات الموقع</a>
                             </div>
-                            <div class="swiper-slide">
-                                <div class="inner">
-                                    <h1 class="title">تحليل نتائج الفصل الثاني</h1>
-                                    <p>يقوم الموقع بتحليل مفصل للنتائج بالإظافة إلى إستخراج توجيه التلاميذ.، وكذا الفروق بين الفصلين الأول والثاني.</p>
-                                    <div class="banner-btn">
-                                        <a href="#" class="edu-btn">الدخول</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="inner">
-                                    <h1 class="title">تحليل نتائج الفصل الثالث</h1>
-                                    <p>يقوم الموقع بتحليل مفصل للنتائج بالإظافة إلى إستخراج توجيه التلاميذ. بالإظافة إلى إستخراج الفروق بين الفصلين الثاني والثالث.</p>
-                                    <div class="banner-btn">
-                                        <a href="#" class="edu-btn">الدخول</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="inner">
-                                    <h1 class="title">تحليل النتائج السنوية</h1>
-                                    <p>الموقع لا يتوقف على تحليل النتائج الفصلية فقط بل يقوم بتحليل النتائج السنوية أيضا.</p>
-                                    <div class="banner-btn">
-                                        <a href="#" class="edu-btn">الدخول</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="inner">
-                                    <h1 class="title">تحليل نتائج <br>شهادة التعليم المتوسط.</h1>
-                                    <p>يمكنكم أيضا تحليل نتائج شهادة التعليم المتوسط، بالإظافة إلى مقارنة النتائج السنوية ونتائج الشهادة.</p>
-                                    <div class="banner-btn">
-                                        <a href="#" class="edu-btn">الدخول</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="inner">
-                                    <h1 class="title">معالجة البطاقة التحليلية.</h1>
-                                    <p>يمكنكم في هذا الجانب من معالجة البطاقة التحليلية لإمتحان تقييم المكتسبات وإستخراج التلاميذ المعنيين بالمتابعة.</p>
-                                    <div class="banner-btn">
-                                        <a href="#" class="edu-btn">الدخول</a>
-                                    </div>
-                                </div>
-                            </div>
+                            <ul class="shape-group">
+                                <li class="shape-1 scene" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
+                                    <img data-depth="2" src="assets/images/counterup/shape-05.png" alt="Shape">
+                                </li>
+                            </ul>
                         </div>
                     </div>
+                    <div class="col-lg-7">
+                        <div class="banner-thumbnail">
+                            <div class="thumbnail" data-sal-delay="500" data-sal="slide-left" data-sal-duration="1000">
+                                <img src="assets/images/banner/pi-chart.webp" alt="Pi-chart Image">
+                            </div>
+                            <ul class="shape-group">
+                                <li class="shape-1 scene" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
+                                    <img data-depth="2" src="assets/images/banner/icon-3.png" alt="Shape">
+                                </li>
+                                <li class="shape-2 scene" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
+                                    <img data-depth="-2" src="assets/images/banner/icon-1.png" alt="Shape">
+                                </li>
+                                <li class="shape-3 scene" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
+                                    <img data-depth="2" src="assets/images/banner/icon-5.png" alt="Shape">
+                                </li>
+                                <li class="shape-4 scene" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
+                                    <img data-depth="-2" src="assets/images/banner/icon-2.png" alt="Shape">
+                                </li>
+                                <li class="shape-5 scene" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
+                                    <img data-depth="2" src="assets/images/banner/icon-4.png" alt="Shape">
+                                </li>
+                                <li class="shape-6" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
+                                    <img class="rotateit" src="assets/images/about/shape-25.png" alt="Shape">
+                                </li>
+                                <li class="shape-7" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
+                                    <img class="rotateit" src="assets/images/about/shape-13.png" alt="Shape">
+                                </li>
 
-                    <!-- end slider-content -->
-                    <div class="swiper health-slider-main">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <div class="slide-image" data-background="assets/images/bg/bg-image-29.webp">
-                                </div>
-                            </div>
-                            <!-- end swiper-slide -->
-                            <div class="swiper-slide">
-                                <div class="slide-image" data-background="assets/images/bg/bg-image-30.webp">
-                                </div>
-                            </div>
-                            <!-- end swiper-slide -->
-                            <div class="swiper-slide">
-                                <div class="slide-image" data-background="assets/images/bg/bg-image-31.webp">
-                                </div>
-                            </div>
-                            <!-- end swiper-slide -->
-                            <div class="swiper-slide">
-                                <div class="slide-image" data-background="assets/images/bg/bg-image-31.webp">
-                                </div>
-                            </div>
-                            <!-- end swiper-slide -->
-                            <div class="swiper-slide">
-                                <div class="slide-image" data-background="assets/images/bg/bg-image-31.webp">
-                                </div>
-                            </div>
-                            <!-- end swiper-slide -->
-                            <div class="swiper-slide">
-                                <div class="slide-image" data-background="assets/images/bg/bg-image-31.webp">
-                                </div>
-                            </div>
+                            </ul>
+                                
                         </div>
                     </div>
-                    <!-- end slider-main -->
-                    <ul class="shape-group">
-                        <li class="shape-1">
-                            <span></span>
-                        </li>
-                        <li class="shape-2">
-                            <img class="rotateit" src="assets/images/about/shape-25.png" alt="Shape">
-                        </li>
-                    </ul>
                 </div>
             </div>
-            <div class="banner-gallery">
-                <div class="thumbnail thumbnail-1" data-sal-delay="500" data-sal="slide-up" data-sal-duration="1000">
-                    <img src="assets/images/banner/kid-3.webp" alt="Girl Image">
-                </div>
-                <div class="thumbnail thumbnail-2" data-sal-delay="500" data-sal="slide-down" data-sal-duration="1000">
-                    <img src="assets/images/banner/kid-4.webp" alt="Girl Image">
-                </div>
-            </div>
-            <ul class="shape-group">
-                <li class="shape-1 scene" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
-                    <img data-depth="2" src="assets/images/banner/icon-3.png" alt="Shape">
-                </li>
-                <li class="shape-2 scene" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
-                    <img data-depth="-2" src="assets/images/banner/icon-1.png" alt="Shape">
-                </li>
-                <li class="shape-3 scene" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
-                    <img data-depth="2" src="assets/images/banner/icon-5.png" alt="Shape">
-                </li>
-                <li class="shape-4 scene" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
-                    <img data-depth="-2" src="assets/images/banner/icon-2.png" alt="Shape">
-                </li>
-                <li class="shape-5 scene" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
-                    <img data-depth="2" src="assets/images/banner/icon-4.png" alt="Shape">
-                </li>
-                <li class="shape-6" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
-                    <img class="rotateit" src="assets/images/about/shape-25.png" alt="Shape">
-                </li>
-                <li class="shape-7" data-sal-delay="1000" data-sal="fade" data-sal-duration="1000">
-                    <img class="rotateit" src="assets/images/about/shape-13.png" alt="Shape">
-                </li>
-            </ul>
         </div>
         <!--=====================================-->
         <!--=       Brand Area Start            =-->
@@ -640,7 +552,7 @@
         <!--=           Team Area Start         =-->
         <!--=====================================-->
         <!-- Start Team Area  -->
-        <div class="edu-team-area team-area-1 gap-tb-text">
+        <section id="Teamsection" class="edu-team-area team-area-1 gap-tb-text">
             <div class="container">
                 <div class="section-title section-center" data-sal-delay="150" data-sal="slide-up" data-sal-duration="800">
                     <span class="pre-title">روابط مباشرة</span>
@@ -743,7 +655,7 @@
                     <!-- End Instructor Grid  -->
                 </div>
             </div>
-        </div>
+        </section>
         <!-- End Team Area  -->
         <!--=====================================-->
         <!--=      CTA Banner Area Start        =-->
@@ -830,6 +742,7 @@
     <script src="assets/js/vendor/tipped.min.js"></script>
     <script src="assets/js/vendor/smooth-scroll.min.js"></script>
     <script src="assets/js/vendor/isInViewport.jquery.min.js"></script>
+    <script src="assets/js/sections.js"></script>
 
     <!-- Site Scripts -->
     <script src="assets/js/app.js"></script>
