--- a/Tahlil_T2.html
+++ b/Tahlil_T2.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" href="assets/css/vendor/rowReorder.dataTables.css">
     <link rel="stylesheet" href="assets/css/vendor/responsive.dataTables.css">
     <link rel="stylesheet" href="assets/css/vendor/responsive.bootstrap5.min.css" >
-    <link rel="stylesheet" href="assets/css/vendor/dataTables.dataTables.css" >
+
     <link rel="stylesheet" href="assets/css/vendor/buttons.dataTables.css" >
 
     <link rel="stylesheet" href="assets/css/vendor/datatables.min.css" > 
@@ -71,6 +71,50 @@
 
     <div id="main-wrapper" class="main-wrapper">
 
+        <!--=====================================-->
+        <!--=    Sidebar Banner Area Start      =-->
+        <!--=====================================-->
+        <div class="section-buttons">
+            <a class="section-button scroll-btn" data-target="Orsection"><i class="ri-table-line"></i>
+                <span class="sidetooltip">قاعدة البيانات</span>
+            </a>
+
+            <a class="section-button scroll-btn" data-target="Analysesection"><i class="ri-line-chart-fill"></i>
+                <span class="sidetooltip">تحليل نتائج الفصل الأول</span>
+            </a>
+
+            <a class="section-button scroll-btn" data-target="Greatersection"><i class="ri-group-2-line"></i>
+                <span class="sidetooltip">تحليل نتائج الفصل الاول حسب الفئات</span>
+            </a>
+
+            <a class="section-button scroll-btn" data-target="Successsection"><i class="ri-percent-line"></i>
+                <span class="sidetooltip">تحليل نتائج الفصل الاول حسب نسبة النجاح</span>
+            </a>
+
+            <a class="section-button scroll-btn" data-target="Gandersection"><i class="ri-genderless-line"></i>
+                <span class="sidetooltip">تحليل نتائج الفصل الاول حسب الجنس</span>
+            </a>
+
+            <a class="section-button scroll-btn" data-target="Failsection"><i class="ri-send-to-back"></i>
+                <span class="sidetooltip">تحليل نتائج الفصل الاول حسب الإعادة</span>
+            </a>
+
+            <a class="section-button scroll-btn" data-target="Outcomesection"><i class="ri-calculator-line"></i>
+                <span class="sidetooltip">حصيلة المعدلات الفصلية</span>
+            </a>
+
+            <a class="section-button scroll-btn" data-target="CVsection"><i class="ri-hand-coin-line"></i>
+                <span class="sidetooltip">نسبة الإنسجام داخل القسم</span>
+            </a>
+
+            <a class="section-button scroll-btn" data-target="CVGroupssection"><i class="ri-group-line"></i>
+                <span class="sidetooltip">المعايير الإحصائية بالفئات الخمس</span>
+            </a>
+
+            <a class="section-button scroll-btn" data-target="discsection"><i class="ri-bar-chart-2-line"></i>
+                <span class="sidetooltip">توزيع أفراد العينة</span>
+            </a>
+        </div>
         <!--=====================================-->
         <!--=        Header Area Start          =-->
         <!--=====================================-->
@@ -3740,6 +3784,9 @@
     <script src="assets/js/vendor/plotly.min.js"></script>
     <script src="assets/js/vendor/plotly-locale-ar.js"></script>
     <script src="assets/js/vendor/plotly-locale-ar-dz.js"></script>
+
+    <!-- Sections-->
+    <script src="assets/js/sections.js"></script>
 
     <script src="assets/js/vendor/FileSaver.min.js"></script>
 
