firebase+contact-me

--- a/Tahlil_All.html
+++ b/Tahlil_All.html
@@ -351,7 +351,7 @@
         <!--=     Or Table  Area Start          =-->
         <!--=====================================-->
         <section class="gap-bottom-equal edu-about-area about-style-1">
-            <div class="container edublink-animated-shape">
+            <div id="Orsection" class="container edublink-animated-shape">
                 <br><br>
                 <div class="row g-5 align-items-center">
                 <a class="edu-btn btn-medium">قاعدة بيانات النتائج السنوية</i></a>
@@ -3147,7 +3147,7 @@
         <!--=       Gendar Table Area Start     =-->
         <!--=====================================-->
         <section class="gap-bottom-equal edu-about-area about-style-1">
-            <div class="container edublink-animated-shape">
+            <div id="discsection" class="container edublink-animated-shape">
                 <div class="row g-5 align-items-center">
                 <a class="edu-btn btn-medium">توزيع التلاميذ حسب الجنس</i></a>
                     <div class="about-image-gallery">
