--- a/Tahlil_T2.html
+++ b/Tahlil_T2.html
@@ -111,6 +111,11 @@
                 <span class="sidetooltip">المعايير الإحصائية بالفئات الخمس</span>
             </a>
 
+            <a class="section-button scroll-btn" data-target="CVGroupssection"><i class="ri-git-fork-fill"></i>
+                <span class="sidetooltip">تحليل نتائج مقارنة الفصل الأول والفصل الثاني</span>
+            </a>
+
+
             <a class="section-button scroll-btn" data-target="discsection"><i class="ri-bar-chart-2-line"></i>
                 <span class="sidetooltip">توزيع أفراد العينة</span>
             </a>
@@ -350,7 +355,7 @@
         <!--=     Or Table  Area Start          =-->
         <!--=====================================-->
         <section class="gap-bottom-equal edu-about-area about-style-1">
-            <div class="container edublink-animated-shape">
+            <div id="Orsection" class="container edublink-animated-shape">
                 <br><br>
                 <div class="row g-5 align-items-center">
                 <a class="edu-btn btn-medium">قاعدة بيانات نتائج الفصل الثاني </i></a>
@@ -3313,7 +3318,7 @@
         <!--=       Gendar Table Area Start     =-->
         <!--=====================================-->
         <section class="gap-bottom-equal edu-about-area about-style-1">
-            <div class="container edublink-animated-shape">
+            <div id="discsection" class="container edublink-animated-shape">
                 <div class="row g-5 align-items-center">
                 <a class="edu-btn btn-medium">توزيع التلاميذ حسب الجنس</i></a>
                     <div class="about-image-gallery">
