--- a/Tahlil_T3.html
+++ b/Tahlil_T3.html
@@ -111,6 +111,10 @@
                 <span class="sidetooltip">المعايير الإحصائية بالفئات الخمس</span>
             </a>
 
+            <a class="section-button scroll-btn" data-target="Differencessection"><i class="ri-git-fork-fill"></i>
+                <span class="sidetooltip">تحليل نتائج المقارنة بين الفصل الثاني والثالث</span>
+            </a>
+
             <a class="section-button scroll-btn" data-target="discsection"><i class="ri-bar-chart-2-line"></i>
                 <span class="sidetooltip">توزيع أفراد العينة</span>
             </a>
@@ -351,7 +355,7 @@
         <!--=     Or Table  Area Start          =-->
         <!--=====================================-->
         <section class="gap-bottom-equal edu-about-area about-style-1">
-            <div class="container edublink-animated-shape">
+            <div id="Orsection" class="container edublink-animated-shape">
                 <br><br>
                 <div class="row g-5 align-items-center">
                 <a class="edu-btn btn-medium">قاعدة بيانات نتائج الفصل الثالث </i></a>
@@ -3360,7 +3364,7 @@
         <!--=       Gendar Table Area Start     =-->
         <!--=====================================-->
         <section class="gap-bottom-equal edu-about-area about-style-1">
-            <div class="container edublink-animated-shape">
+            <div id="discsection" class="container edublink-animated-shape">
                 <div class="row g-5 align-items-center">
                 <a class="edu-btn btn-medium">توزيع التلاميذ حسب الجنس</i></a>
                     <div class="about-image-gallery">
