--- a/contact-me.html
+++ b/contact-me.html
@@ -249,17 +249,17 @@
                                     <h3 class="heading-title">سوف نجيب عن الجميع</h3>
                                     <ul class="address-list">
                                         <li>
-                                            <h5 class="title">العنوان</h5>
+                                            <h5 class="title"><i class="ri-community-line"></i> العنوان</h5>
                                             <p>الجزائر, الجزائر, 16000</p>
                                         </li>
                                         <br>
                                         <li>
-                                            <h5 class="title">البريد الإلكتروني</h5>
+                                            <h5 class="title"><i class="ri-mail-open-line"></i> البريد الإلكتروني</h5>
                                             <p><a href="mailto:alwajeez.contact@gmail.com">alwajeez.contact@gmail.com</a></p>
                                         </li>
                                         <br>
                                         <li>
-                                            <h5 class="title">رقم الهاتف</h5>
+                                            <h5 class="title"><i class="ri-customer-service-2-line"></i> رقم الهاتف</h5>
                                             <p><a href="tel:+213561520492">92 04 52 0561 (213+)</a></p>
                                         </li>
                                     </ul>
@@ -367,6 +367,11 @@
     <script src="assets/js/vendor/tipped.min.js"></script>
     <script src="assets/js/vendor/smooth-scroll.min.js"></script>
     <script src="assets/js/vendor/isInViewport.jquery.min.js"></script>
+    <script src="assets/contact-me.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-analytics.js"></script>
+
 
     <!-- Site Scripts -->
     <script src="assets/js/app.js"></script>
