--- a/contact-me.html
+++ b/contact-me.html
@@ -28,6 +28,11 @@
     <!-- Site Stylesheet -->
     <link rel="stylesheet" href="assets/css/app.css">
 
+    
+    <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-firestore.js"></script>
+
 </head>
 
 <body class="sticky-header ">
@@ -368,9 +373,6 @@
     <script src="assets/js/vendor/smooth-scroll.min.js"></script>
     <script src="assets/js/vendor/isInViewport.jquery.min.js"></script>
     <script src="assets/contact-me.js"></script>
-
-    <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-analytics.js"></script>
 
 
     <!-- Site Scripts -->
